syntax = "proto3";

package proto;

import "buf/validate/validate.proto";
import "availability.proto";

option go_package = "./proto";



message UpsertLocationRequest {
  string id = 1 [(buf.validate.field).required = false, (buf.validate.field).string.uuid = true];
  string name = 2;
  string tz = 3;
  repeated AvailabilityRange availabilityRanges = 4;
}

message UpsertLocationResponse{
  string id = 1;
}